[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-phishing-detector"
version = "1.0.0"
description = "AI-powered phishing URL and email analyzer with heuristic and LLM-based detection."
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
ai-phishing-detector = "ai_phishing_detector.main:cli"

[tool.setuptools.packages.find]
include = ["ai_phishing_detector*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
